--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /Chaincode/docutracker/workplace/*.iml
 /Chaincode/docutracker/Sample_PDFs
 first-network
-Network/node_modules
+Network/node/node_modules
 /bin
 bin
 .vagrant
