--- a/Network/node/package.json
+++ b/Network/node/package.json
@@ -13,12 +13,13 @@
     "npm": ">=3.10.10"
   },
   "dependencies": {
+    "grpc": "1.8.4",
     "body-parser": "^1.17.2",
     "co": "^4.6.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "fabric-ca-client": "^1.0.0",
-    "fabric-client": "^1.0.0",
+    "fabric-ca-client": "1.1.0-alpha",
+    "fabric-client": "1.1.0-alpha",
     "fast-stats": "0.0.3",
     "log4js": "^0.6.38",
     "mysql": "^2.13.0",
